syntax = "proto3";

option java_multiple_files = true;
package jbr.grpc.product;

message ProductRequest{
	int32 id=1;
	string name=2;
	int32 price=3;
}

message ProductResponse{
	string product=1;
}

service ProductService{
	rpc getProduct(ProductRequest) returns (ProductResponse);
}

